<resources>
    <string name="app_name">MP</string>
    <string name="song_name">Song Name</string>
    <string name="rewind">Rewind</string>
    <string name="previous">Previous</string>
    <string name="play_pause">Play/Pause</string>
    <string name="skip">Skip</string>
    <string name="fast_forward">Fast Forward</string>
    <string name="song_image">Song Image</string>
    <string name="TimeDefault">00:00</string>
    <string name="Time_Default">00:00:00</string>
    <string name="download_test_files">Download Test Files</string>
</resources>