<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        app:cardCornerRadius="10dp"
        android:id="@+id/playCard">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="6dp">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/songImage"
                android:src="@drawable/ic_baseline_music_note_50"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/song_image" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:scrollHorizontally="true"
                android:marqueeRepeatLimit="marquee_forever"
                android:ellipsize="marquee"
                android:text="@string/song_name"
                android:textSize="24sp"
                android:id="@+id/songName"
                android:gravity="start|center"
                android:layout_weight="1"
                android:singleLine="true" />

            <TextView
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:singleLine="true"
                android:text="@string/TimeDefault"
                android:textSize="15sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>